--- a/assets/scss/partials/layout/_nav.scss
+++ b/assets/scss/partials/layout/_nav.scss
@@ -17,7 +17,7 @@
     width: 100%;
 
     @include themed() {
-      background-color: t('primary-lighter');
+      background-color: t('primary-dark');
     }
 
     @include desktop {
